temporary workaround for mobile non-tiles layout

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -1,4 +1,9 @@
 .mobile-view .topic-list {
+
+  .right {
+    margin-left: 95px;
+  }
+
   .pull-right {
     .keep-in-line {
       display: inline-block;
