--- a/common/common.scss
+++ b/common/common.scss
@@ -14,9 +14,9 @@
       display: none;
     }
     display: grid;
-    grid-gap: 6px;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-    grid-auto-rows: 10px;
+    gap: 6px;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-auto-rows: 4px;
   }
 
   .tiles-grid-item-width2 {
@@ -30,9 +30,9 @@
     box-sizing: border-box;
     cursor: pointer;
     border-radius: 3px;
-    grid-row-end: span 24;
+    grid-row-end: span 44;
 
-    &.white-text.has-thumbnail {
+    &.white-text.has-thumbnail:not(.visited) {
       .topic-details,
       .topic-title a.title,
       .topic-featured-link,
@@ -45,7 +45,7 @@
       }
     }
 
-    &.black-text.has-thumbnail {
+    &.black-text.has-thumbnail:not(.visited) {
       .topic-details,
       .topic-title a.title,
       .topic-featured-link,
@@ -77,6 +77,7 @@
 
   .image {
     grid-area: photo;
+    display: block;
   }
 
   .topic-thumbnail {
@@ -112,6 +113,14 @@
       "excerpt excerpt excerpt excerpt excerpt"
       "tags tags tags tags tags"
       "meta meta meta meta actions";
+  }
+
+  .tiles-grid-item:hover {
+    background-color: var(--blend-primary-secondary-5);
+
+    .topic-thumbnail img {
+      opacity:0.7;
+    }
   }
 
   .topic-header-grid {
@@ -154,6 +163,10 @@
     }
   }
 
+  .topic-list-item.visited a.title {
+    color: var(--primary-medium);
+  }
+
   .topic-users {
     grid-area: posters;
     padding: 0 0 5px 5px;
@@ -172,11 +185,18 @@
     }
   }
 
+  .topic-statuses {
+    float: right;
+  }
+
   .topic-category {
     grid-area: category;
     padding: 0 0 4px 0;
-    .badge-wrapper.box span {
-      border-radius: 3px;
+  }
+
+  .thumbnail {
+    .no-thumbnail {
+      display: none;
     }
   }
 
@@ -185,6 +205,7 @@
     line-height: 1.3;
     max-height: 300px;
     max-width: 100%;
+    float: left;
     clear: both;
     padding-right: 0px;
 
@@ -262,52 +283,47 @@
     text-align: right;
     vertical-align: bottom;
   }
-}
-
-.topic-thumbnail {
-  float: left;
-  padding-right: 15px;
-
-  .no-thumbnail {
-    display: none;
+  
+  .middot:after {
+    content: "\00B7";
   }
 }
 
-.topic-list .main-link a.title {
-  padding: 0;
-}
+//styling excluding tiles
+html:not(.tile-style) {
+  .topic-list .link-bottom-line {
+    display: block;
+  }
 
-.topic-details .topic-excerpt {
-  display: block;
-}
+  .topic-thumbnail {
+    float: left;
+    padding-right: 15px;
 
-.actions-and-meta-data {
-  float: left;
-  margin-top: 5px;
+    .no-thumbnail {
+      display: none;
+    }
+  }
+
+  .topic-excerpt {
+    display: block;
+  }
+
+  .topic-actions {
+    float: left;
+    clear: both;
+    display: flex;
+    align-items: center;
+  }
 }
 
 img.thumbnail {
   object-fit: cover;
 }
 
-.middot:after {
-  content: "\00B7";
-}
-
-.topic-list span.badge-category .category-name {
-  max-width: 250px;
-}
 
 .main-link .topic-category {
   display: inline-block;
   clear: left;
-}
-
-html:not(.tile-style) .topic-actions {
-  float: left;
-  clear: both;
-  display: flex;
-  align-items: center;
 }
 
 .like-count,
@@ -323,17 +339,6 @@ html:not(.tile-style) .topic-actions {
     line-height: initial;
     font-weight: initial;
   }
-}
-
-.list-vote-count {
-  float: left;
-  padding-right: 3px;
-  margin-top: 5px;
-}
-
-.topic-actions .list-vote-count {
-  float: none;
-  margin-top: 0;
 }
 
 button.list-button {
@@ -568,67 +573,65 @@ img.select-thumbnail-preview {
 }
 
 // Advanced Search
-// .search-results .thumbnail-grid {
-  .thumbnail-grid .fps-result-entries {
-    margin-top: 15px;
-    padding: 0 10px 0 10px;
+.thumbnail-grid .fps-result-entries {
+  margin-top: 15px;
+  padding: 0 10px 0 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 15px;
+  grid-template-rows: auto;
+
+  .fps-grid-item {
+    box-sizing: border-box;
+    cursor: pointer;
+    float: top;
+    margin-bottom: 6px;
+    border-radius: 3px;
+    padding: 10px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 15px;
-    grid-template-rows: auto;
+    grid-template-columns: 1;
+    grid-template-rows: auto auto auto;
+    grid-template-areas:
+      "fpsphoto"
+      "fpsheader"
+      "fpscategory"
+  }
 
-    .fps-grid-item {
-      box-sizing: border-box;
-      cursor: pointer;
-      float: top;
-      margin-bottom: 6px;
-      border-radius: 3px;
-      padding: 10px;
-      display: grid;
-      grid-template-columns: 1;
-      grid-template-rows: auto auto auto;
-      grid-template-areas:
-        "fpsphoto"
-        "fpsheader"
-        "fpscategory"
-    }
+  .fps-topic-header {
+    grid-area: fpsheader;
+    padding: 0 0 4px 0;
 
-    .fps-topic-header {
-      grid-area: fpsheader;
-      padding: 0 0 4px 0;
-
-      .topic-title {
-        font-size: 1em;
-        line-height: 1;
-      }
-    }
-
-    .fps-topic-category {
-      grid-area: fpscategory;
-      padding: 0 0 4px 0;
-    }
-
-    .topic-thumbnail {
-      grid-area: fpsphoto;
-      padding: 0 0 4px 0;
-    }
-
-    .thumbnail {
-      .no-thumbnail {
-        display: none;
-      }
-    }
-
-    .topic-tags {
-      grid-area: tags;
-
-      .discourse-tags {
-        display: inline-block;
-      }
-    }
-
-    .list-tags {
-      padding-right: 10px;
+    .topic-title {
+      font-size: 1em;
+      line-height: 1;
     }
   }
-// }
+
+  .fps-topic-category {
+    grid-area: fpscategory;
+    padding: 0 0 4px 0;
+  }
+
+  .topic-thumbnail {
+    grid-area: fpsphoto;
+    padding: 0 0 4px 0;
+  }
+
+  .thumbnail {
+    .no-thumbnail {
+      display: none;
+    }
+  }
+
+  .topic-tags {
+    grid-area: tags;
+
+    .discourse-tags {
+      display: inline-block;
+    }
+  }
+
+  .list-tags {
+    padding-right: 10px;
+  }
+}
