FIX: missing localisation on user prefs and update locale paths

--- a/javascripts/discourse/templates/components/tlp-user-preferences.hbs
+++ b/javascripts/discourse/templates/components/tlp-user-preferences.hbs
@@ -1,2 +1,2 @@
-<label class="control-label">{{i18n 'tlp.user_prefs.title'}}</label>
-{{preference-checkbox labelKey="tlp.user_prefs.prefer_low_res_thumbnail" checked=model.custom_fields.tlp_user_prefs_prefer_low_res_thumbnails}}
+<label class="control-label">{{theme-i18n "tlp.user_prefs.title"}}</label>
+{{preference-checkbox labelKey=(theme-prefix "tlp.user_prefs.prefer_low_res_thumnbails") checked=model.custom_fields.tlp_user_prefs_prefer_low_res_thumbnails}}
