--- a/javascripts/discourse/templates/modal/tlp-thumbnail-selector.hbs
+++ b/javascripts/discourse/templates/modal/tlp-thumbnail-selector.hbs
@@ -1,5 +1,5 @@
-{{#d-modal-body class="select-thumbnail" title=(theme-prefix "thumbnail_selector.title")}}
-  <h3>{{i18n (theme-prefix "thumbnail_selector.topic_title_prefix")}} "{{modal_topic_title}}"</h3>
+{{#d-modal-body class="select-thumbnail" title=(theme-prefix "tlp.thumbnail_selector.title")}}
+  <h3>{{i18n (theme-prefix "tlp.thumbnail_selector.topic_title_prefix")}} "{{modal_topic_title}}"</h3>
   <span class="select-thumbnail">
   {{#each thumbnailList.thumbnailselection as |thumbnail|}}
     <img class="select-thumbnail-options" src={{thumbnail.image_url}}
