tweak like count vert location

--- a/common/common.scss
+++ b/common/common.scss
@@ -318,6 +318,7 @@ img.thumbnail {
   font-size: 13px;
   display: inline-block;
   padding-right: 5px;
+  vertical-align: 0.125em;
 
   .vote-count {
     height: initial;
