tweak anchor vertical aligment using inline block

--- a/common/common.scss
+++ b/common/common.scss
@@ -197,6 +197,9 @@
 
     .container {
       align-self: center;
+      a {
+        display: inline-block;
+      }
 
       .top-line {
         display: inline;
