--- a/common/common.scss
+++ b/common/common.scss
@@ -17,6 +17,7 @@
     gap: 6px;
     grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
     grid-auto-rows: 4px;
+    border-top: none;
   }
 
   .tiles-grid-item-width2 {
