--- a/common/common.scss
+++ b/common/common.scss
@@ -178,6 +178,7 @@
     grid-area: tfooter;
     vertical-align: middle;
     display: grid;
+    padding-top: 0.33em;
     z-index: 10;
     grid-template-columns: 9fr 12fr 10fr;
 
