remove image mask on mobile for now

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -135,13 +135,13 @@
     display: block;
   }
 
-  .image-mask {
-    position: relative;
-    margin-bottom: -200px;
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-  }
+  // .image-mask {
+  //   position: relative;
+  //   margin-bottom: -200px;
+  //   height: 100%;
+  //   width: 100%;
+  //   z-index: 1;
+  // }
 
   .thumbnail {
     .no-thumbnail {
