fix tag box colours for black text tiles

--- a/common/common.scss
+++ b/common/common.scss
@@ -64,6 +64,11 @@
     }
 
     &.black-text.has-thumbnail {
+
+      .discourse-tag.box {
+        background-color: #ccc;
+      }
+
       .topic-details,
       .topic-title a.title,
       .topic-featured-link,
