alter hover effect to work across light and dark

--- a/common/common.scss
+++ b/common/common.scss
@@ -96,7 +96,7 @@
   }
 
   .tiles-grid-item:hover {
-    background-color: var(--blend-primary-secondary-5);
+    filter: invert(10%);
   }
 
   .tiles-grid-item:active {
