tweak margin on action buttons to prevent clash with tags

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -16,6 +16,7 @@
   .pull-right {
     .keep-in-line {
       display: inline-block;
+      margin-top: 4px;
 
       .num {
         text-align: right;
