--- a/javascripts/discourse/connectors/edit-topic/select-thumbnail-connector.hbs
+++ b/javascripts/discourse/connectors/edit-topic/select-thumbnail-connector.hbs
@@ -1,3 +1,3 @@
-{{#if model.sidecar_installed}}
-  {{select-thumbnail topic_id=model.id topic_title=model.title buffered=buffered}}
+{{#if this.args.model.sidecar_installed}}
+  <SelectThumbnail @topic_id={{this.args.model.id}} @topic_title={{this.args.model.title}} @buffered={{this.args.buffered}}/>
 {{/if}}
