revert modal to classic component to support buffered mixin

--- a/javascripts/discourse/components/select-thumbnail.hbs
+++ b/javascripts/discourse/components/select-thumbnail.hbs
@@ -6,7 +6,7 @@
     @icon="id-card"
     @label={{theme-prefix "tlp.thumbnail_selector.select_preview_button"}}
   />
-  {{#if this.showSelected}}
+  {{#if this.args.buffered.user_chosen_thumbnail_url}}
     <br><img src={{this.args.buffered.user_chosen_thumbnail_url}} class="select-thumbnail-preview">
   {{/if}}
 </div>
