--- a/javascripts/discourse/connectors/user-card-additional-buttons/portfolio-button.hbs
+++ b/javascripts/discourse/connectors/user-card-additional-buttons/portfolio-button.hbs
@@ -1,8 +1,8 @@
 {{#if portfolioEnabled}}
 <div class="portfolio-button-inner">
-  {{#link-to 'userActivity.portfolio' user}}
+  <LinkTo @route="userActivity.portfolio" @model={{user}}>
     <svg class="fa d-icon d-icon-images svg-icon svg-string" xmlns="http://www.w3.org/2000/svg"><use xlink:href="#images"></use></svg>
     <label>{{theme-i18n 'tlp.user_activity_portfolio_title'}}</label>
-  {{/link-to}}
+  </LinkTo>
 </div>
 {{/if}}
